# dice-game

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
cmake/: clang-cxx-dev-tools.cmake
include/app/: app.hpp  user_input_component.hpp
include/common/: exceptions.hpp  hash.hpp
include/debug/: debug.hpp
include/dices/: dice.hpp  score_calculator.hpp
include/enums/: game_state.hpp
include/game/: game_state.hpp  player.hpp
src/: main.cpp
src/app/: app.cpp  user_input_component.cpp
src/common/: exceptions.cpp  hash.cpp
src/dices/: dice.cpp  score_calculator.cpp
src/enums/: game_state.cpp
src/game/: game_state.cpp  player.cpp
test/: score_calculator_ut.cpp  test_user_input_ut.cpp
